--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <i class="fa fa-shopping-cart"></i> Cart <span class="simpleCart_total"></span>
             </a>
         </div>
+        <div class="intro_container"></div>
         <div class="simpleStore_container"></div>
         <div class="simpleStore_cart_container"></div>
     </div>
@@ -57,10 +58,11 @@
                 <div class="row">
                     <h5 class="item_name"></h5>
                     <div class="simpleStore_getDetail_container">
-                        <span class="item_price"></span>€
-                    </div>
-                    <div class="simpleStore_getDetail_container" id="details-btn">
-                        <a class="button u-pull-right simpleStore_getDetail">Details</a>
+                        <div id="price-div">
+                            <span class="item_price"></span>
+                            <span>€</span>
+                        </div>
+                        <a class="button u-pull-right simpleStore_getDetail" id="details-btn">Details</a>
                     </div>
                 </div>
 
@@ -74,10 +76,8 @@
             <a href="#" class="close view_close">&times;</a>
 
             <div class="row" id="product-detail-template-row">
-                <div class="four columns">
-                    <span class="zoom">
-                         <img src="" role="presentation" class="item_thumb" alt="t-shirt"/>
-                    </span>
+                <div class="four columns" id="img-zoom">
+                         <img src="" onclick="window.open(this.src);" class="item_thumb" id="item_thumb_zoom" alt="t-shirt"/>
                 </div>
 
                 <div class="eight columns">
@@ -86,7 +86,8 @@
                     <p class="item_description"></p>
 
                     <div class="simpleStore_price">
-                        <span class="item_price"></span>€ &nbsp;&nbsp; (shipping included - 3 to 14 days depending on location)
+                        <span class="item_price"></span>
+                        <span>€ &nbsp;&nbsp; (Free shipping in Denmark, 5€ for other European countries - 3 to 14 days depending on location)</span>
                     </div>
 
                     <div class="qty">
@@ -94,6 +95,7 @@
                         <input type="number" value="1" min="1" step="1" class="item_Quantity">
                     </div>
                     <div class="simpleStore_options"></div>
+                    <div class="simpleStore_shipping"></div>
                     <a class="item_add button u-pull-right" href="javascript:;">Add to Cart</a>
                 </div>
             </div>
@@ -135,6 +137,13 @@
         </div>
     </script>
 
+    <!-- Intro View -->
+    <script id="intro-view" type="x-template">
+        <div class="intro">
+            <img src="icon.png">
+        </div>
+    </script>
+
     <!-- Error View -->
     <script id="error-template" type="x-template">
         <div class="error">
@@ -149,15 +158,6 @@
         <div class="notify">
 			<p class="notify_text"></p>
         </div>
-    </script>
-
-    <!-- Image Zoom -->
-
-    <script src='jquery.zoom.js'></script>
-    <script>
-        $(document).ready(function(){
-            $('.item_thumb').zoom();
-        });
     </script>
 
 <!-- End Document
