--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="images/favicon.png">
 
-    <!-- Scripts
-   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script src="https://code.jquery.com/jquery-1.8.0.min.js"></script>
 
 </head>
 <body>
@@ -87,7 +84,7 @@
 
                     <div class="simpleStore_price">
                         <span class="item_price"></span>
-                        <span>€ &nbsp;&nbsp; (Free shipping in Denmark, 5€ for other European countries - 3 to 14 days depending on location)</span>
+                        <span>€</span>
                     </div>
 
                     <div class="qty">
@@ -96,6 +93,8 @@
                     </div>
                     <div class="simpleStore_options"></div>
                     <div class="simpleStore_shipping"></div>
+                    <br> <br> <br>
+                    <span>(Free shipping in Denmark, 5€ for other European countries - 3 to 14 days depending on location)</span>
                     <a class="item_add button u-pull-right" href="javascript:;">Add to Cart</a>
                 </div>
             </div>
