--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
                         <input type="number" value="1" min="1" step="1" class="item_Quantity">
                     </div>
                     <div class="simpleStore_options"></div>
-                    <div class="simpleStore_shipping"></div>
+                    <div class="simpleStore_shipping">
+                        <label>Location</label>
+                        <select class="item_shipping">
+                            <option value="0">Denmark</option>
+                            <option value="5">Europe</option>
+                        </select>
+                    </div>
                     <br> <br> <br>
                     <span>(Free shipping in Denmark, 5€ for other European countries - 3 to 14 days depending on location)</span>
                     <a class="item_add button u-pull-right" href="javascript:;">Add to Cart</a>
