--- a/index.html
+++ b/index.html
@@ -92,15 +92,8 @@
                         <input type="number" value="1" min="1" step="1" class="item_Quantity">
                     </div>
                     <div class="simpleStore_options"></div>
-                    <div class="simpleStore_shipping">
-                        <label>Location</label>
-                        <select class="item_shipping">
-                            <option value="0">Denmark</option>
-                            <option value="5">Europe</option>
-                        </select>
-                    </div>
                     <br> <br> <br>
-                    <span>(Free shipping in Denmark, 5€ for other European countries - 3 to 14 days depending on location)</span>
+                    <span>(Free shipping in Denmark, 5€ for other European countries - delivery in 3 to 14 days depending on location)</span>
                     <a class="item_add button u-pull-right" href="javascript:;">Add to Cart</a>
                 </div>
             </div>
@@ -115,6 +108,14 @@
 
             <div class="row">
                 <div class="eight columns">
+                    <div class="simpleStore_shipping">
+                        <label>Please select the delivery location</label>
+                        <!-- <select class="shippingCountry" onclick="addShippingCosts()"> -->
+                        <select class="shippingCountry">
+                            <option selected="selected" value="0">Denmark</option>
+                            <option value="5">Europe</option>
+                        </select>
+                    </div>
                     <div class="simpleCart_items"></div>
                     <a href="javascript:;" class="simpleCart_empty u-pull-left">Empty Cart <i class="fa fa-trash-o"></i></a>
                 </div>
@@ -130,7 +131,6 @@
                             <div class="simpleCart_tax"></div>
                         </div>
                         <div class="cart_info_item cart_shipping">Shipping:
-                            <div class="simpleCart_shipping"></div>
                         </div>
                         <div class="cart_info_item cart_total"><b>Total:
                             <div class="simpleCart_grandTotal"></div>
