--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <nav class="breadcrumb">
                     <!--Links in Navbar-->
                     <a class="breadcrumb-item" href="index.html">Home</a>
-                    <a class="breadcrumb-item" href="t-shirts.html">T-Shirts</a>
+                    <a class="button button-primary u-pull-right breadcrumb-item" id="open-t-shirts">T-Shirts</a>
                     <a class="breadcrumb-item" href="prints.html">Prints</a>
                     <a class="breadcrumb-item" href="about.html">About</a>
                     <a class="button button-primary u-pull-right simpleStore_viewCart">
@@ -78,8 +78,8 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram "></i></a>
+                    <a href="https://www.facebook.com/eleven11squared/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/11_squared/"><i class="fab fa-instagram "></i></a>
                     <a href="#"><i class="fab fa-pinterest "></i></a>
                 </li>
             </ul>
@@ -88,6 +88,31 @@
 
     <!-- Templates
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Intro View -->
+    <script id="intro-template" type="x-template">
+            <div class="section1">
+                <div class="title-container">
+                    <h1 class="company-name">Eleven<br>Squared</h1>
+                    <img src="images/img1.jpg" alt="photo" id="img1">
+                </div>
+                <div class="image-and-slogan-container">
+                    <img src="images/img2.jpg" alt="photo" id="img2">
+                    <div class="slogan-container">
+                        <img src="images/lady.png" alt="lady" id="lady-png">
+                        <div class="slogan-text-container">
+                            <h2 class="slogan-text">Monthly Designs</h2>
+                            <h2 class="slogan-text">Limited Edition</h2>
+                            <h2 class="slogan-text">Expressive Art</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section2">
+                <h3 class="section2-title">T-shirts</h3>
+                <div class="slideshow"></div>
+                <a class="see-more">see more</a>
+            </div>
+    </script>
 
     <!-- Products View -->
     <script id="products-template" type="x-template">
@@ -105,7 +130,6 @@
                         <a class="button u-pull-right simpleStore_getDetail" id="details-btn">Details</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </script>
